# onion

./: Cargo.toml  README.md  capture_lab_moves.txt  design_lab_scenes.txt
deploy/: index.html  onion.js
docs/: engine_worker.d.ts  engine_worker.js  engine_worker_bg.wasm  engine_worker_bg.wasm.d.ts  index.html  onion.d.ts  onion.js  onion_bg.wasm  onion_bg.wasm.d.ts
docs/onion/: onion_bg.wasm
src/: engine.rs  main.rs  shader.wgsl
tests/: perft_suite.rs
