[package]
name = "onion"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27.2" 
wgpu = { version = "0.16.0", features = ["webgl"]}
wasm-bindgen = "0.2"
env_logger = "0.9.0"
pollster = "0.3.0"
bytemuck = "1.13.1"

console_error_panic_hook = { version = "0.1"}
console_log = { version = "1.0"}
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4"}

[dependencies.web-sys]
version = "0.3.60"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'HtmlCanvasElement'
]